# fastapi_simplest_blockchain

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
tests/: test_main.py
